@@ -1,3 +1,8 @@
+2007-04-21  Ville Vainio  <vivainio@gmail.com>
+
+	* Extensions/ipy_extutil.py: added extension to manage other ipython
+	extensions. Now only supports 'ls' == list extensions.
+
 2007-04-20  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/Debugger.py (BdbQuit_excepthook): fix small bug that
